2017.4/_sources/plugins/available/deblur/index.txt
deblur
======

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	No description available. See plugin website: <a href="https://github.com/biocore/deblur">https://github.com/biocore/deblur</a><br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.4.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/biocore/deblur">https://github.com/biocore/deblur</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           <a href="https://github.com/biocore/deblur/issues">https://github.com/biocore/deblur/issues</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           Deblur rapidly resolves single-nucleotide community sequence patterns. Amnon Amir, Daniel McDonald, Jose A. Navas-Molina, Evguenia Kopylova, Jamie Morton, Zhenjiang Zech Xu, Eric P. Kightley, Luke R. Thompson, Embriette R. Hyde, Antonio Gonzalez, Rob Knight. mSystems Mar 2017, 2 (2) doi:10.1128/mSystems.00191-16.<br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   denoise_16S
   
   denoise_other
   


Visualizers
-----------


.. toctree::
   :maxdepth: 1

   
   visualize_stats
   
