2017.5/_sources/plugins/available/deblur/index.txt
deblur
======

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	This QIIME 2 plugin wraps the Deblur software for performing sequence quality control.<br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.5.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/biocore/deblur" rel="noopener">https://github.com/biocore/deblur</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           Please post to the QIIME 2 forum for help with this plugin: <a href="https://forum.qiime2.org" rel="noopener">https://forum.qiime2.org</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           Deblur rapidly resolves single-nucleotide community sequence patterns. Amnon Amir, Daniel McDonald, Jose A. Navas-Molina, Evguenia Kopylova, Jamie Morton, Zhenjiang Zech Xu, Eric P. Kightley, Luke R. Thompson, Embriette R. Hyde, Antonio Gonzalez, Rob Knight. mSystems Mar 2017, 2 (2) doi:10.1128/mSystems.00191-16.<br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   denoise_16S
   
   denoise_other
   


Visualizers
-----------


.. toctree::
   :maxdepth: 1

   
   visualize_stats
   
